<resources>
    <string name="app_name">HoliYAY1</string>
    <string name="greeting_message">Hello, %1$s</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_too_short">Password is too short</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="holiyay">HoliYay</string>
    <string name="welcome">Welcome!</string>
    <string name="get_started">Get Started</string>
    <string name="have_an_account">Have an account?</string>
    <string name="beautiful_view">Beautiful view</string>
    <string name="name">Name</string>
    <string name="quote">The best for you are here!</string>
    <string name="recommendation">Here are some of our recommendations for you!</string>
    <string name="here_are_your_liked_destinations">Here are your liked destinations!</string>
    <string name="destination_instruction">Here are some of the destinations that are in your favourite list!</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="popular_places">Popular Places</string>
    <string name="explore">Explore</string>
    <string name="back">back</string>
    <string name="my_profile">My Profile</string>
    <string name="picture">picture</string>
    <string name="personal_information">Personal Information</string>
    <string name="location">Location</string>
    <string name="let_s_travel_now">Let\'s travel now!</string>
    <string name="search">Search</string>
    <string name="travel_plannings">Travel Plannings</string>
    <string name="save">Save</string>
    <string name="city">City</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="enter_keywords">Mau kemana hari ini?</string>
    <string name="enter_city">Masukkan kota tujuan</string>
    <string name="city_description">Pastikan awalan huruf dari kota menggunakan huruf kapital, ya! (Contoh: Jakarta, Surabaya, Malang, dsb.)</string>
<<<<<<< HEAD
</resources>
=======
</resources>
>>>>>>> 406bc2843e1c9b5899f6b7e83e117792bf548775
