<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/beach_picture">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curved_rectangle"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/app_logo"
                android:contentDescription="@string/holiyay" />

            <TextView
                android:id="@+id/login_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="24sp"
                android:textColor="#000000"
                android:layout_marginTop="32dp" />

            <TextView
                android:id="@+id/username_label_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#000000"
                android:layout_marginTop="32dp" />

            <EditText
                android:id="@+id/username_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="username" />

            <TextView
                android:id="@+id/password_label_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#000000"
                android:layout_marginTop="16dp" />

            <com.example.holiyay1.ui.CustomEditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="password" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF"
                android:background="@drawable/button_background"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp" />

            <TextView
                android:id="@+id/have_account_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_an_account"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#0000FF"
                android:background="@android:color/transparent" />
        </LinearLayout>
    </RelativeLayout>
</layout>
