<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="details"
            type="com.example.holiyay1.data.api.Location" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">

            <!-- Image ImageView -->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/location"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@{details.image}"
                tools:src="@tools:sample/backgrounds/scenic" />

            <!-- Place Name TextView -->
            <TextView
                android:id="@+id/placeNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{details.placeName}"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_below="@id/imageView"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp" />

            <!-- Description TextView -->
            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{details.description}"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_below="@id/placeNameTextView"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp" />

            <!-- Title for City TextView -->
            <TextView
                android:id="@+id/cityTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/descriptionTextView"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/city"
                android:textColor="#000000"
                android:textSize="18sp" />

            <!-- City TextView -->
            <TextView
                android:id="@+id/cityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{details.city}"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_below="@id/cityTitleTextView"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp" />

            <!-- Title for Price TextView -->
            <TextView
                android:id="@+id/priceTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_below="@id/cityTextView"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp" />

            <!-- Price TextView -->
            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{details.price}"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_below="@id/priceTitleTextView"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp" />

            <!-- Title for Rating TextView -->
            <TextView
                android:id="@+id/ratingTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/priceTextView"
                android:layout_marginTop="16dp"
                android:text="@string/rating"
                android:textColor="#000000"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp" />

            <!-- Rating TextView -->
            <TextView
                android:id="@+id/ratingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ratingTitleTextView"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@{Double.toString(details.rating)}"
                android:textColor="#000000"
                android:textSize="18sp" />

            <!-- Favorite Button -->
            <ImageButton
                android:id="@+id/favoriteButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_fav"
                android:background="@null"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/favorite" />

        </RelativeLayout>
    </ScrollView>

</layout>